<resources>
    <string name="app_name">C-Compiler Lite</string>
    
    <!-- Navigation -->
    <string name="nav_home">Explorer</string>
    <string name="nav_terminal">Terminal</string>
    <string name="nav_settings">Settings</string>
    
    <!-- Explorer -->
    <string name="build_ndk">Build NDK</string>
    <string name="current_path">Path: %1$s</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_desc">C-Compiler Lite needs storage access to manage and build your projects.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="access_denied">Access Denied to this folder</string>
    <string name="opening_file_not_supported">Opening files is not yet supported</string>
    
    <!-- Terminal -->
    <string name="terminal_title">Build Console</string>
    <string name="clear_log">Clear</string>
    <string name="build_started">BUILD STARTED</string>
    <string name="build_success">BUILD SUCCESSFUL</string>
    <string name="build_failed">BUILD FAILED</string>
    <string name="ndk_not_found">ndk-build not found! Please install NDK in Settings.</string>
    
    <!-- Settings/Profile -->
    <string name="ndk_status">NDK Status</string>
    <string name="install_ndk">Install NDK (ZIP)</string>
    <string name="reset_ndk">Reset NDK</string>
    <string name="ndk_not_installed">Status: Not Installed</string>
    <string name="ndk_installed">Status: NDK Installed</string>
    <string name="extracting_ndk">Extracting NDK…</string>
    <string name="remove_ndk_confirm_title">Remove NDK?</string>
    <string name="remove_ndk_confirm_msg">The NDK tools will be deleted. You\'ll need to reinstall them to build projects.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- Notifications -->
    <string name="notif_channel_build">Build Status</string>
    <string name="notif_channel_install">Installer</string>
    <string name="building_project">Building project…</string>
    <string name="installing_ndk">Installing NDK…</string>
</resources>