<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment android:id="@+id/homeFragment"
        android:name="com.ccompile.lite.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment android:id="@+id/dashboardFragment"
        android:name="com.ccompile.lite.DashboardFragment"
        android:label="@string/nav_terminal"
        tools:layout="@layout/fragment_dashboard" />

    <fragment android:id="@+id/profileFragment"
        android:name="com.ccompile.lite.ProfileFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_profile" />

</navigation>